styles/layout.css
/*
  Containment
    - https://w3c.github.io/csswg-drafts/css-contain
  Generic Layouts
    - https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_mode
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_table
  Flexbox
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_flexible_box_layout
  Columns
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_multicol_layout
    - https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_cookbook/Column_layouts
  Floating
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_display/Block_formatting_context
*/
:root {}

/*
  Performance
    - What forces layout & reflow - https://gist.github.com/paulirish/5d52fb081b3570c81e3a
    - Avoid Layout Thrashing - https://web.dev/articles/avoid-large-complex-layouts-and-layout-thrashing
    - Containment
      - https://drafts.csswg.org/css-contain
      - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_containment
      - https://blogs.igalia.com/mrego/2019/01/11/an-introduction-to-css-containment
      - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_containment/Using_CSS_containment
*/

/*
  Screen
    - concepts - https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts
    - `display-mode` - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/display-mode
    - Adaptivity and Layout - https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/adaptivity-and-layout
*/

/*
  Media Queries:
    - https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries
    - display-mode - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/display-mode
*/
/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}

/*
  Orientation:
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/orientation
    - https://developer.mozilla.org/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation
*/
@media ( orientation: portrait ) {
  :root {}
}
@media ( orientation: landscape ) {
  :root {}
}

*, ::before, ::after, ::marker {  /* https://stackoverflow.com/q/7327326 */
  min-width: 0; /* https://defensivecss.dev/tip/flexbox-min-content-size */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_box_model/Introduction_to_the_CSS_box_model */
  position: relative;
  box-sizing: inherit;
}

html, body {
  /*
    - https://dev.to/tepythai/why-100vw-causes-horizontal-scrollbar-4nlm
    - https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit
    - https://polypane.app/blog/strategies-for-dealing-with-horizontal-overflows
  */
  /* TODO: REFACTOR */
  /* min-width: 100vw; */
  /* min-width: -webkit-fill-available; */  /* Mozilla-based browsers will ignore this. */
  min-width: -moz-available;          /* WebKit-based browsers will ignore this. */
  min-width: stretch;                 /* https://caniuse.com/?search=fill-available */
  min-height: 100vh;                  /* fall-back */
  min-height: -moz-available;         /* WebKit-based browsers will ignore this. */
  min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
  min-height: stretch;                /* https://caniuse.com/?search=fill-available */
  max-width: 100vw;
}

/* boxing - https://paulirish.com/2012/box-sizing-border-box-ftw */
html {
  overflow-y: scroll;
  overflow-x: scroll;
  /* https://drafts.csswg.org/css-box-4 */
  /* https://css-tricks.com/international-box-sizing-awareness-day */
  box-sizing: border-box; /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_box_model/Introduction_to_the_CSS_box_model */
}

/*
  CSS Grid:
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout

  Flexbox:
    - https://css-tricks.com/snippets/css/a-guide-to-flexbox
    - https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox
*/
body {
  height: 100%;
  /* height: 100svh; */
  /* height: 100dvh; */
  display: flex;
  flex-direction: column;
}
body > * { /* all immediate children of <body> */
  width: var(--max-width);
  max-width: var(--max-width);
}
body > header, body > nav, body > main, body > aside, body > footer {}
body > header {}
body > main {}
body > aside {}
body > footer {
  /* top: 100vh; */
  /* position: sticky; */
}

/* Navigations ==================================================================
 *   - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/menu_role
 *   - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/menubar_role
 *   - https://www.w3.org/WAI/ARIA/apg/patterns/menubar/examples/menubar-editor
 *   - https://www.w3.org/WAI/ARIA/apg/patterns/menubar/examples/menubar-navigation
 *   - https://www.w3.org/WAI/ARIA/apg/patterns/disclosure/examples/disclosure-navigation
 *   - https://w3.org/WAI/ARIA/apg/patterns/disclosure/examples/disclosure-navigation-hybrid
 */
body > a[href='#main'] { z-index: 1 }
body > nav {
  top: 0;
  z-index: 1;
  height: 100%;
  /* height: 100vh; */
  /* height: 100svh; */
  position: sticky;
}
body > nav::before, body > nav::after {
  content: '<nav>';
  display: block;
  text-indent: 1ch;
  background: inherit;
}
body > nav::before {
  /* float: left; */
}

nav > * {}
nav > details {
  width: inherit;
  outline-style: dotted;
  margin-block: 1ch;
  background: inherit;
}
nav > details[open] {
  background: inherit;
  /* overflow-y: scroll; */
}
nav > details::before, nav > details::after {
  content: '🍔';
}
nav > details::before {
  content: 'menu';
  text-indent: 1ch;
}
nav > details[open]::before {
 content: 'menu open';
}
nav > details > summary::marker
  {}


/* Toolbar ============================================================= */
/* https://www.w3.org/WAI/ARIA/apg/patterns/toolbar/examples/toolbar */
/* https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/toolbar_role */

/* Tabs ==================================================================
 *   - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/tab_role
 *   - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/tablist_role
 *   - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/tabpanel_role
 */


::-webkit-resizer {
    background: red;
    border: 2px solid black;
    outline: 2px solid yellow;
    box-shadow: 0 0 5px 5px blue;
}

